--- a/index.html
+++ b/index.html
@@ -410,12 +410,11 @@
             <i class="fas fa-leaf" style="color:#50b888;"></i>
             <span style="font-size: 14.5px;">Hypoallergénique,adapté aux peaux sensibles</span>
           </div>
-          <!-- Hypoallergénique -->
-<div style="display: flex; align-items: center; gap: 10px;">
-  <i class="fa-solid fa-leaf" style="color:#50b888;"></i>
-  <span style="font-size: 14.5px;">Hypoallergénique, adapté aux peaux sensibles</span>
-</div>
-
+          <div style="display: flex; align-items: center; gap: 10px;">
+            <i class="fas fa-star" style="color:#ffc107;"></i>
+            <span style="font-size: 14.5px;">Finition brillante, sans ternissement</span>
+          </div>
+        </div>
 
         <p style="margin-top: 10px;">
           <strong>Prix :</strong> <del>54,99 €</del> <span style="color:#6a9fff;">45,99 €</span>
@@ -496,7 +495,5 @@
 
   </div>
 </section>
-
-
 </body>
 </html>
